--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
                         ],
                         "styles": [
                             "./node_modules/bootstrap/dist/css/bootstrap.css",
+                            "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
                             "src/styles.scss"
                         ],
                         "scripts": [
@@ -94,6 +95,7 @@
                         ],
                         "styles": [
                             "./node_modules/bootstrap/dist/css/bootstrap.css",
+                            "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
                             "src/styles.scss"
                         ],
                         "scripts": [
