--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^6.2.0",
     "ngx-toastr": "^13.1.0",
-    "rxjs": "~6.6.0",
+    "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
