--- a/angular.json
+++ b/angular.json
@@ -31,11 +31,15 @@
                             "./node_modules/bootstrap/dist/css/bootstrap.css",
                             "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
                             "./node_modules/ngx-toastr/toastr.css",
-                            "src/styles.scss"
+                            "src/styles.scss",
+                            "./node_modules/summernote/dist/summernote-lite.min.css",
+                            "./node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
+                            "./node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css"
                         ],
                         "scripts": [
                             "./node_modules/jquery/dist/jquery.js",
-                            "./node_modules/bootstrap/dist/js/bootstrap.js"
+                            "./node_modules/bootstrap/dist/js/bootstrap.js",
+                            "./node_modules/summernote/dist/summernote-lite.min.js"
                         ]
                     },
                     "configurations": {
@@ -98,11 +102,15 @@
                             "./node_modules/bootstrap/dist/css/bootstrap.css",
                             "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
                             "./node_modules/ngx-toastr/toastr.css",
-                            "src/styles.scss"
+                            "src/styles.scss",
+                            "./node_modules/summernote/dist/summernote-lite.min.css",
+                            "./node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
+                            "./node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css"
                         ],
                         "scripts": [
                             "./node_modules/jquery/dist/jquery.js",
-                            "./node_modules/bootstrap/dist/js/bootstrap.js"
+                            "./node_modules/bootstrap/dist/js/bootstrap.js",
+                            "./node_modules/summernote/dist/summernote-lite.min.js"
                         ]
                     }
                 },
