--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-owl-carousel-o": "^5.0.0",
+    "ngx-summernote": "^0.8.0",
     "ngx-toastr": "^13.1.0",
     "rxjs": "^6.6.3",
+    "summernote": "^0.8.18",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
@@ -33,9 +36,10 @@
     "@angular-devkit/build-angular": "~0.1001.4",
     "@angular/cli": "~10.1.4",
     "@angular/compiler-cli": "~10.1.4",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
+    "angular-file": "^3.4.0",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
